--- a/Sunduk.PWA/Components/CAM/EditSequenceComponent.razor
+++ b/Sunduk.PWA/Components/CAM/EditSequenceComponent.razor
@@ -8,6 +8,7 @@
                                                       x is SpecialTurningTool ||
                                                       x is TurningExternalTool ||
                                                       x is TurningInternalTool ||
+                                                      x is GroovingFaceTool ||
                                                       x is GroovingExternalTool ||
                                                       x is GroovingInternalTool ||
                                                       x is ThreadingExternalTool ||
