Закрыл пока нерабочие способы обратной связи. В сундукаме добавил обработку торцевых канавок. Пофиксил описание внутренних канавочных резцов.

--- a/Sunduk.PWA/Components/CAM/ToolTableComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ToolTableComponent.razor
@@ -957,7 +957,7 @@
     }
     #endregion
 
-    #region Список расточнх
+    #region Список расточных
     public List<TurningInternalTool> TurningInternalTools
     {
         get
