--- a/Sunduk.PWA/Components/CAM/AddSequenceComponent.razor
+++ b/Sunduk.PWA/Components/CAM/AddSequenceComponent.razor
@@ -32,7 +32,6 @@
                     @if (MachineType == MachineType.Turning)
                     {
                         @foreach (var tool in Tools.Where(x =>
-                                                    x is Tool ||
                                                     x is TurningExternalTool ||
                                                     x is TurningInternalTool ||
                                                     x is GroovingExternalTool ||
@@ -552,22 +551,22 @@
                     <MudSelectItem Value="@(TurningGroovingSequences.Grooving)">Канавка</MudSelectItem>
                 </MudSelect>
             </MudItem>
-            @if (ExternalGrooving)
+            @if (GrooveType is CuttingType.Radial)
             {
                 <MudItem xs="4">
                     <MudSelect @bind-Value="Tool" Variant="Variant.Filled" Margin="Margin.Dense" Label="Инструмент" T="Tool">
-                        @foreach (var tool in Tools.Where(x => x is GroovingExternalTool))
+                        @foreach (var tool in Tools.Where(x => x is GroovingExternalTool || x is GroovingInternalTool))
                         {
                             <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
                         }
                     </MudSelect>
                 </MudItem>
             }
-            @if (!ExternalGrooving)
+            @if (GrooveType is CuttingType.Face)
             {
                 <MudItem xs="4">
                     <MudSelect @bind-Value="Tool" Variant="Variant.Filled" Margin="Margin.Dense" Label="Инструмент" T="Tool">
-                        @foreach (var tool in Tools.Where(x => x is GroovingInternalTool))
+                        @foreach (var tool in Tools.Where(x => x is GroovingFaceTool))
                         {
                             <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
                         }
@@ -577,7 +576,7 @@
             @if (GroovingSequence is TurningGroovingSequences.Grooving or TurningGroovingSequences.RoughGrooving)
             {
                 <MudItem xs="4">
-                    <MudSelect Label="Тип" T="CuttingType" Value="@CuttingType.Radial" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnGrooveCuttingTypeChanged">
+                    <MudSelect Label="Тип" T="CuttingType" Value="GrooveType" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnGrooveCuttingTypeChanged">
                         <MudSelectItem Value="@(CuttingType.Radial)">Радиальная</MudSelectItem>
                         <MudSelectItem Value="@(CuttingType.Face)">Торцевая</MudSelectItem>
                     </MudSelect>
@@ -588,9 +587,18 @@
                 <MudItem xs="4">
                     <MudTextField Label="Конечный диаметр" @bind-Value="_GroovingInternalDiameter" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
-                <MudItem xs="3">
-                    <MudTextField Label="Ширина" @bind-Value="_GroovingWidth" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
-                </MudItem>
+                @if(GrooveType is CuttingType.Face)
+                {
+                    <MudItem xs="3">
+                        <MudTextField Label="Начальная точка" @bind-Value="_GroovingStartPoint" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
+                    </MudItem>
+                }
+                else
+                {
+                    <MudItem xs="3">
+                        <MudTextField Label="Ширина" @bind-Value="_GroovingWidth" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
+                    </MudItem>
+                }
                 <MudItem xs="3">
                     <MudTextField Label="Конечная точка" @bind-Value="_GroovingCuttingPoint" Variant="Variant.Filled" Margin="Margin.Dense" AdornmentText="мм" Immediate="true" />
                 </MudItem>
@@ -783,7 +791,7 @@
     {
         GrooveType = value;
         if (GrooveType is CuttingType.Radial && !(Tool is GroovingExternalTool || Tool is GroovingInternalTool)) Tool = null;
-        if (GrooveType is CuttingType.Face && (Tool is GroovingExternalTool || Tool is GroovingInternalTool)) Tool = null;
+        if (GrooveType is CuttingType.Face && !(Tool is GroovingFaceTool)) Tool = null;
     }
 
     private void OnTemplateChanged(string value)
@@ -1072,6 +1080,9 @@
 
     private string _GroovingWidth { get; set; }
     private double GroovingWidth { get => Util.GetDouble(_GroovingWidth); }
+
+    private string _GroovingStartPoint { get; set; }
+    private double GroovingStartPoint { get => Util.GetDouble(_GroovingStartPoint); }
 
     private string _GroovingCuttingPoint { get; set; } = "-";
     private double GroovingCuttingPoint { get => Util.GetDouble(_GroovingCuttingPoint, numberOption: Util.GetNumberOption.Any); }
@@ -1377,6 +1388,24 @@
                         InnerGroovingBluntType);
                     return CurrentSequence.Operation;
                 }
+                else if (Tool is GroovingFaceTool)
+                {
+                    CurrentSequence = new TurningFaceGroovingSequence(
+                        Machine,
+                        WorkpieceMaterial,
+                        Tool as GroovingFaceTool,
+                        GroovingCuttingPoint,
+                        GroovingExternalDiameter,
+                        GroovingInternalDiameter,
+                        GroovingStartPoint,
+                        GroovingStepOver,
+                        GroovingProfStockAllow,
+                        OuterGroovingCornerBlunt,
+                        InnerGroovingCornerBlunt,
+                        OuterGroovingBluntType,
+                        InnerGroovingBluntType);
+                    return CurrentSequence.Operation;
+                }
             }
             if (Type == SequenceType.Grooving && GroovingSequence == TurningGroovingSequences.RoughGrooving)
             {
@@ -1416,6 +1445,25 @@
                         InnerGroovingBluntType);
                     return CurrentSequence.Operation;
                 }
+                else if (Tool is GroovingFaceTool)
+                {
+                    CurrentSequence = new TurningFaceRoughGroovingSequence(
+                        Machine,
+                        WorkpieceMaterial,
+                        Tool as GroovingFaceTool,
+                        GroovingCuttingPoint,
+                        GroovingExternalDiameter,
+                        GroovingInternalDiameter,
+                        GroovingStartPoint,
+                        GroovingStepOver,
+                        GroovingProfStockAllow,
+                        OuterGroovingCornerBlunt,
+                        InnerGroovingCornerBlunt,
+                        OuterGroovingBluntType,
+                        InnerGroovingBluntType);
+                    return CurrentSequence.Operation;
+                }
+
             }
             return string.Empty;
         }
