--- a/Sunduk.PWA/Dialogs/FeedBackDialog.razor
+++ b/Sunduk.PWA/Dialogs/FeedBackDialog.razor
@@ -20,15 +20,19 @@
                     <p>
                         • email <MudLink Typo="Typo.body2" Href="@("mailto:dece1ver@sunduk.one")">dece1ver@sunduk.one</MudLink>;
                     </p>
+                    @*<p>
+                        <strike>
+                            • через <MudLink Typo="Typo.body2" Href="https://sunduk-fb.azurewebsites.net/">сайт обратной связи</MudLink>;
+                        </strike>
+                    </p>*@
                     <p>
-                        • через <MudLink Typo="Typo.body2" Href="https://sunduk-fb.azurewebsites.net/">сайт обратной связи</MudLink>;
-                    </p>
-                    <p>
-                        • заполнив форму ниже:
+                        <strike>
+                            • заполнив форму ниже:
+                        </strike>
                     </p>
             </MudText>
-            <MudTextField Class="feedback-form" T="string" Label="Имя" Variant="Variant.Filled" @bind-Value="Name" Immediate="true" />
-            <MudTextField Class="feedback-form" T="string" Label="Сообщение" Variant="Variant.Filled" @bind-Value="Message" Lines="5" Immediate="true" />
+            <MudTextField Class="feedback-form" T="string" Label="Имя" Variant="Variant.Filled" @bind-Value="Name" Immediate="true" Disabled=true/>
+            <MudTextField Class="feedback-form" T="string" Label="Сообщение" Variant="Variant.Filled" @bind-Value="Message" Lines="5" Immediate="true" Disabled=true/>
         </div>
     </DialogContent>
     <DialogActions>
@@ -36,7 +40,7 @@
         {
             <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="mx-4" />
         }
-        <MudIconButton Icon="@Icons.Material.Filled.Send" Color="Color.Primary" OnClick="Submit"/>
+        <MudIconButton Icon="@Icons.Material.Filled.Send" Color="Color.Primary" OnClick="Submit" Disabled=true/>
     </DialogActions>
 </MudDialog>
 @code 
