Улучшил редактирование, по аналогии с добавлением. Сделал редактирование канавок.

--- a/Sunduk.PWA/Components/CAM/AddSequenceComponent.razor
+++ b/Sunduk.PWA/Components/CAM/AddSequenceComponent.razor
@@ -31,28 +31,14 @@
                 <MudSelect @bind-Value="Tool" Variant="Variant.Filled" Margin="Margin.Dense" Label="Инструмент" T="Tool">
                     @if (MachineType == MachineType.Turning)
                     {
-                        @foreach (var tool in Tools.Where(x =>
-                                                    x is TurningExternalTool ||
-                                                    x is TurningInternalTool ||
-                                                    x is GroovingExternalTool ||
-                                                    x is GroovingFaceTool ||
-                                                    x is GroovingInternalTool ||
-                                                    x is ThreadingExternalTool ||
-                                                    x is ThreadingInternalTool ||
-                                                    x is TurningDrillingTool ||
-                                                    x is TurningTappingTool
-                                                    ))
+                        @foreach (var tool in Tools.Where(x => x.MachineType is MachineType.Turning))
                         {
                             <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
                         }
                     }
                     @if (MachineType == MachineType.Milling)
                     {
-                        @foreach (var tool in Tools.Where(x =>
-                                                    x is MillingDrillingTool ||
-                                                    x is MillingTappingTool ||
-                                                    x is MillingTool
-                                                    ))
+                        @foreach (var tool in Tools.Where(x => x.MachineType is MachineType.Milling))
                         {
                             <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
                         }
@@ -334,7 +320,7 @@
 
         #region Резьбонарезные
         case SequenceType.Threading:
-            <MudItem xs="6">
+            <MudItem xs="12" sm="6" md="4">
                 <MudSelect Label="Переход" T="ThreadingSequences" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnThreadingSequenceChanged">
                     @if (MachineType == MachineType.Turning)
                     {
@@ -367,105 +353,56 @@
                         </MudSelect>
                     </MudItem>
                 }
-                @if (ThreadStandart == ThreadStandart.Metric)
-                {
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Стандарт" T="ThreadStandart" Variant="Variant.Filled" Margin="Margin.Dense" @bind-Value="ThreadStandart">
-                            <MudSelectItem Value="@(ThreadStandart.Metric)">Метрическая 60° (М)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.BSPP)">Трубная цилиндрическая 55° (Tr)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.Trapeziodal)">Трапецеидальная 30° (G)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.NPT)">Коническая 60° (K)</MudSelectItem>
-                        </MudSelect>
-                    </MudItem>
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Тип" T="CuttingType" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnThreadCuttingTypeChanged">
-                            <MudSelectItem Value="@(CuttingType.External)">Наружная</MudSelectItem>
-                            <MudSelectItem Value="@(CuttingType.Internal)">Внутренняя</MudSelectItem>
-                        </MudSelect>
-                    </MudItem>
-                }
+                <MudItem xs="6" sm="6" md="(ThreadStandart is ThreadStandart.Metric or ThreadStandart.Trapeziodal ? 6 : 4)">
+                    <MudSelect Label="Стандарт" T="ThreadStandart" Variant="Variant.Filled" Margin="Margin.Dense" @bind-Value="ThreadStandart">
+                        <MudSelectItem Value="@(ThreadStandart.Metric)">Метрическая 60° (М)</MudSelectItem>
+                        <MudSelectItem Value="@(ThreadStandart.BSPP)">Трубная цилиндрическая 55° (Tr)</MudSelectItem>
+                        <MudSelectItem Value="@(ThreadStandart.Trapeziodal)">Трапецеидальная 30° (G)</MudSelectItem>
+                        <MudSelectItem Value="@(ThreadStandart.NPT)">Коническая 60° (K)</MudSelectItem>
+                    </MudSelect>
+                </MudItem>
+                <MudItem xs="6" sm="6" md="(ThreadStandart is ThreadStandart.Metric or ThreadStandart.Trapeziodal ? 6 : 4)">
+                    <MudSelect Label="Тип" T="CuttingType" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnThreadCuttingTypeChanged">
+                        <MudSelectItem Value="@(CuttingType.External)">Наружная</MudSelectItem>
+                        <MudSelectItem Value="@(CuttingType.Internal)">Внутренняя</MudSelectItem>
+                    </MudSelect>
+                </MudItem>
                 @if (ThreadStandart == ThreadStandart.BSPP)
                 {
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Стандарт" T="ThreadStandart" Variant="Variant.Filled" Margin="Margin.Dense" @bind-Value="ThreadStandart">
-                            <MudSelectItem Value="@(ThreadStandart.Metric)">Метрическая 60° (М)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.BSPP)">Трубная цилиндрическая 55° (Tr)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.Trapeziodal)">Трапецеидальная 30° (G)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.NPT)">Коническая 60° (K)</MudSelectItem>
-                        </MudSelect>
-                    </MudItem>
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Тип" T="CuttingType" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnThreadCuttingTypeChanged">
-                            <MudSelectItem Value="@(CuttingType.External)">Наружная</MudSelectItem>
-                            <MudSelectItem Value="@(CuttingType.Internal)">Внутренняя</MudSelectItem>
-                        </MudSelect>
-                    </MudItem>
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Шаблон" T="string" Value="CurrentThreadTemplate" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnTemplateChanged">
-                            @foreach (string item in Thread.bsppTemplates)
-                            {
-                                <MudSelectItem Value="@(item)">
-                                    <MudText>@item</MudText>
-                                </MudSelectItem>
-                            }
-                        </MudSelect>
-                    </MudItem>
-
-                }
-                @if (ThreadStandart == ThreadStandart.Trapeziodal)
-                {
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Стандарт" T="ThreadStandart" Variant="Variant.Filled" Margin="Margin.Dense" @bind-Value="ThreadStandart">
-                            <MudSelectItem Value="@(ThreadStandart.Metric)">Метрическая 60° (М)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.BSPP)">Трубная цилиндрическая 55° (Tr)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.Trapeziodal)">Трапецеидальная 30° (G)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.NPT)">Коническая 60° (K)</MudSelectItem>
-                        </MudSelect>
-                    </MudItem>
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Тип" T="CuttingType" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnThreadCuttingTypeChanged">
-                            <MudSelectItem Value="@(CuttingType.External)">Наружная</MudSelectItem>
-                            <MudSelectItem Value="@(CuttingType.Internal)">Внутренняя</MudSelectItem>
-                        </MudSelect>
-                    </MudItem>
+                <MudItem xs="6" sm="6" md="4">
+                    <MudSelect Label="Шаблон" T="string" Value="CurrentThreadTemplate" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnTemplateChanged">
+                        @foreach (string item in Thread.bsppTemplates)
+                        {
+                            <MudSelectItem Value="@(item)">
+                                <MudText>@item</MudText>
+                            </MudSelectItem>
+                        }
+                    </MudSelect>
+                </MudItem>
                 }
                 @if (ThreadStandart == ThreadStandart.NPT)
                 {
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Стандарт" T="ThreadStandart" Variant="Variant.Filled" Margin="Margin.Dense" @bind-Value="ThreadStandart">
-                            <MudSelectItem Value="@(ThreadStandart.Metric)">Метрическая 60° (М)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.BSPP)">Трубная цилиндрическая 55° (Tr)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.Trapeziodal)">Трапецеидальная 30° (G)</MudSelectItem>
-                            <MudSelectItem Value="@(ThreadStandart.NPT)">Коническая 60° (K)</MudSelectItem>
-                        </MudSelect>
-                    </MudItem>
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Тип" T="CuttingType" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnThreadCuttingTypeChanged">
-                            <MudSelectItem Value="@(CuttingType.External)">Наружная</MudSelectItem>
-                            <MudSelectItem Value="@(CuttingType.Internal)">Внутренняя</MudSelectItem>
-                        </MudSelect>
-                    </MudItem>
-                    <MudItem xs="6" sm="6" md="4">
-                        <MudSelect Label="Шаблон" T="string" Value="CurrentThreadTemplate" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnTemplateChanged">
-                            @foreach (string item in Thread.nptTemplates)
-                            {
-                                <MudSelectItem Value="@(item)">
-                                    <MudText>@item</MudText>
-                                </MudSelectItem>
-                            }
-                        </MudSelect>
-                    </MudItem>
+                <MudItem xs="6" sm="6" md="4">
+                    <MudSelect Label="Шаблон" T="string" Value="CurrentThreadTemplate" Variant="Variant.Filled" Margin="Margin.Dense" ValueChanged="OnTemplateChanged">
+                        @foreach (string item in Thread.nptTemplates)
+                        {
+                            <MudSelectItem Value="@(item)">
+                                <MudText>@item</MudText>
+                            </MudSelectItem>
+                        }
+                    </MudSelect>
+                </MudItem>
                 }
-                <MudItem xs="6">
+                <MudItem xs="6" md="3">
                     <MudTextField Label="Диаметр резьбы" @bind-Value="_ThreadDiameter" Variant="Variant.Filled" Margin="Margin.Dense" Immediate="true" />
                 </MudItem>
-                <MudItem xs="6">
+                <MudItem xs="6" md="3">
                     <MudTextField Label="Шаг резьбы" @bind-Value="_ThreadPitch" Variant="Variant.Filled" Margin="Margin.Dense" Immediate="true" />
                 </MudItem>
-                <MudItem xs="6">
+                <MudItem xs="6" md="3">
                     <MudTextField Label="Начальная точка" @bind-Value="_ThreadStart" Variant="Variant.Filled" Margin="Margin.Dense" Immediate="true" />
                 </MudItem>
-                <MudItem xs="6">
+                <MudItem xs="6" md="3">
                     <MudTextField Label="Конечная точка" @bind-Value="_ThreadEnd" Variant="Variant.Filled" Margin="Margin.Dense" Immediate="true" />
                 </MudItem>
             }
@@ -551,11 +488,22 @@
                     <MudSelectItem Value="@(TurningGroovingSequences.Grooving)">Канавка</MudSelectItem>
                 </MudSelect>
             </MudItem>
-            @if (GrooveType is CuttingType.Radial)
+            @if (GroovingSequence is TurningGroovingSequences.Grooving or TurningGroovingSequences.RoughGrooving && GrooveType is CuttingType.Radial)
             {
                 <MudItem xs="4">
                     <MudSelect @bind-Value="Tool" Variant="Variant.Filled" Margin="Margin.Dense" Label="Инструмент" T="Tool">
                         @foreach (var tool in Tools.Where(x => x is GroovingExternalTool || x is GroovingInternalTool))
+                        {
+                            <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
+                        }
+                    </MudSelect>
+                </MudItem>
+            }
+            else if (GroovingSequence is TurningGroovingSequences.Cutting && GrooveType is CuttingType.Radial)
+            {
+                <MudItem xs="4">
+                    <MudSelect @bind-Value="Tool" Variant="Variant.Filled" Margin="Margin.Dense" Label="Инструмент" T="Tool">
+                        @foreach (var tool in Tools.Where(x => x is GroovingExternalTool))
                         {
                             <MudSelectItem Value="@tool">@tool.Description()</MudSelectItem>
                         }
@@ -1107,8 +1055,10 @@
 
     #endregion
 
-    #region Примеры
-
+    /// <summary>
+    /// Тут сразу формируется переход, текст которого выводится в пример. Уже созданный тут переход сабмитится при нажатии на кнопку.
+    /// </summary>
+    #region Пример
     public string ExampleText
     {
         get
