--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -28,6 +28,8 @@
 @using Sunduk.PWA.Infrastructure.Sequences.Base
 @using Sunduk.PWA.Infrastructure.Sequences.Turning
 @using Sunduk.PWA.Infrastructure.Sequences.Milling
+@using Sunduk.PWA.Infrastructure.Sequences.ContourElements
+@using Sunduk.PWA.Infrastructure.Sequences.ContourElements.Base
 @using Sunduk.PWA.Infrastructure.Tools
 @using Sunduk.PWA.Infrastructure.Tools.Base
 @using Sunduk.PWA.Infrastructure.Tools.Turning
